--- a/notebooks/tDCS-Optimization.ipynb
+++ b/notebooks/tDCS-Optimization.ipynb
@@ -1436,6 +1436,578 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using MNI Coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = simnibs.opt_struct.TDCSoptimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.leadfield_hdf = 'leadfield/ernie_leadfield_EEG10-10_UI_Jurak_2007.hdf5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.name = 'optimization/MNI_target'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_total_current = 2e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_individual_current = 1e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_active_electrodes = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = opt.add_target()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transform a set of coordinates from MNI space to subject space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target.positions = simnibs.mni2subject_coords([-37, -21, 58], '../simnibs/simnibs_examples/ernie/m2m_ernie/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target.intensity = 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ simnibs ]INFO: Optimizing\n",
+      "[ simnibs ]SUMMARY: Optimization set-up\n",
+      "===========================\n",
+      "Leadfield file: leadfield/ernie_leadfield_EEG10-10_UI_Jurak_2007.hdf5\n",
+      "Max. total current: 0.002 (A)\n",
+      "Max. individual current: 0.001 (A)\n",
+      "Max. active electrodes: 8\n",
+      "Name: optimization/MNI_target\n",
+      "----------------------\n",
+      "N targets: 1\n",
+      "Target 1:\n",
+      "positions: [-38.3342 -27.2943  79.8826]\n",
+      "indexes: None\n",
+      "directions: normal\n",
+      "radius: 2\n",
+      "intensity: 0.2\n",
+      "max_angle: None\n",
+      "tissues: None\n",
+      "----------------------\n",
+      "N avoid: 0\n",
+      "\n",
+      "[ simnibs ]SUMMARY: \n",
+      "Optimization Summary\n",
+      "=============================\n",
+      "Total current: 2.00e-03 (A)\n",
+      "Maximum current: 1.00e-03 (A)\n",
+      "Active electrodes: 8\n",
+      "Field Summary\n",
+      "----------------------------\n",
+      "Peak Value (99.9 percentile): 0.25 (E)\n",
+      "Mean field norm: 4.55e-02 (E)\n",
+      "Focality: 50%: 1.26e+04 70%: 3.80e+03 (mm2)\n",
+      "Target 1\n",
+      "    Intensity specified:0.20 achieved: 0.20 (E)\n",
+      "    Average angle across target: 13.5 (degrees)\n",
+      "\n",
+      "[ simnibs ]SUMMARY: \n",
+      "=====================================\n",
+      "SimNIBS finished running optimization\n",
+      "Mesh file: optimization/MNI_target.msh\n",
+      "CSV file: optimization/MNI_target.csv\n",
+      "Summary file: optimization/MNI_target_summary.txt\n",
+      "=====================================\n",
+      "Exception in thread Thread-6:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/subprocess.py\", line 487, in run\n",
+      "    output=stdout, stderr=stderr)\n",
+      "subprocess.CalledProcessError: Command '['/home/mark/anaconda3/envs/zen_env/lib/python3.7/site-packages/simnibs/bin/linux/gmsh', '/home/mark/Desktop/Insai/insai-tes-simulations/notebooks/optimization/MNI_target.msh']' returned non-zero exit status 1.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "simnibs.run_simnibs(opt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = simnibs.opt_struct.TDCSoptimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.leadfield_hdf = 'leadfield/ernie_leadfield_EEG10-10_UI_Jurak_2007.hdf5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.name = 'optimization/two_targets'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_total_current = 2e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_individual_current = 1e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_active_electrodes = 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Target in the left motor cortex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_left = opt.add_target()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_left.positions = [-34.0, -21.4, 88.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_left.intensity = 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Target in the right motor cortex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_right = opt.add_target()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_right.positions = [34.0, -25.5, 90.4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_right.intensity = -0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ simnibs ]INFO: Optimizing\n",
+      "[ simnibs ]SUMMARY: Optimization set-up\n",
+      "===========================\n",
+      "Leadfield file: leadfield/ernie_leadfield_EEG10-10_UI_Jurak_2007.hdf5\n",
+      "Max. total current: 0.002 (A)\n",
+      "Max. individual current: 0.001 (A)\n",
+      "Max. active electrodes: 8\n",
+      "Name: optimization/two_targets\n",
+      "----------------------\n",
+      "N targets: 2\n",
+      "Target 1:\n",
+      "positions: [-34.0, -21.4, 88.5]\n",
+      "indexes: None\n",
+      "directions: normal\n",
+      "radius: 2\n",
+      "intensity: 0.2\n",
+      "max_angle: None\n",
+      "tissues: None\n",
+      "......................\n",
+      "Target 2:\n",
+      "positions: [34.0, -25.5, 90.4]\n",
+      "indexes: None\n",
+      "directions: normal\n",
+      "radius: 2\n",
+      "intensity: -0.2\n",
+      "max_angle: None\n",
+      "tissues: None\n",
+      "----------------------\n",
+      "N avoid: 0\n",
+      "\n",
+      "[ simnibs ]SUMMARY: \n",
+      "Optimization Summary\n",
+      "=============================\n",
+      "Total current: 2.00e-03 (A)\n",
+      "Maximum current: 1.00e-03 (A)\n",
+      "Active electrodes: 8\n",
+      "Field Summary\n",
+      "----------------------------\n",
+      "Peak Value (99.9 percentile): 0.39 (E)\n",
+      "Mean field norm: 1.25e-01 (E)\n",
+      "Focality: 50%: 2.87e+04 70%: 6.12e+03 (mm2)\n",
+      "Target 1\n",
+      "    Intensity specified:0.20 achieved: 0.18 (E)\n",
+      "    Average angle across target: 59.8 (degrees)\n",
+      "Target 2\n",
+      "    Intensity specified:-0.20 achieved: -0.20 (E)\n",
+      "    Average angle across target: 41.0 (degrees)\n",
+      "\n",
+      "[ simnibs ]SUMMARY: \n",
+      "=====================================\n",
+      "SimNIBS finished running optimization\n",
+      "Mesh file: optimization/two_targets.msh\n",
+      "CSV file: optimization/two_targets.csv\n",
+      "Summary file: optimization/two_targets_summary.txt\n",
+      "=====================================\n",
+      "Exception in thread Thread-7:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/subprocess.py\", line 487, in run\n",
+      "    output=stdout, stderr=stderr)\n",
+      "subprocess.CalledProcessError: Command '['/home/mark/anaconda3/envs/zen_env/lib/python3.7/site-packages/simnibs/bin/linux/gmsh', '/home/mark/Desktop/Insai/insai-tes-simulations/notebooks/optimization/two_targets.msh']' returned non-zero exit status 1.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "simnibs.run_simnibs(opt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Avoidance Regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = simnibs.opt_struct.TDCSoptimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.leadfield_hdf = 'leadfield/ernie_leadfield_EEG10-10_UI_Jurak_2007.hdf5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.name = 'optimization/avoid'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_total_current = 2e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_individual_current = 1e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.max_active_electrodes = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = opt.add_target()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target.positions = simnibs.mni2subject_coords([-37, -21, 58], '../simnibs/simnibs_examples/ernie/m2m_ernie/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target.intensity = 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avoid = opt.add_avoid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avoid.tissues = 1006 # corresponds to the eye surface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ simnibs ]INFO: Optimizing\n",
+      "[ simnibs ]SUMMARY: Optimization set-up\n",
+      "===========================\n",
+      "Leadfield file: leadfield/ernie_leadfield_EEG10-10_UI_Jurak_2007.hdf5\n",
+      "Max. total current: 0.002 (A)\n",
+      "Max. individual current: 0.001 (A)\n",
+      "Max. active electrodes: 8\n",
+      "Name: optimization/avoid\n",
+      "----------------------\n",
+      "N targets: 1\n",
+      "Target 1:\n",
+      "positions: [-38.3342 -27.2943  79.8826]\n",
+      "indexes: None\n",
+      "directions: normal\n",
+      "radius: 2\n",
+      "intensity: 0.2\n",
+      "max_angle: None\n",
+      "tissues: None\n",
+      "----------------------\n",
+      "N avoid: 1\n",
+      "Avoid 1:\n",
+      "positions: None\n",
+      "indexes: None\n",
+      "radius: 2\n",
+      "weights: 1.0e+03\n",
+      "tissues: 1006\n",
+      "\n",
+      "[ simnibs ]SUMMARY: \n",
+      "Optimization Summary\n",
+      "=============================\n",
+      "Total current: 2.00e-03 (A)\n",
+      "Maximum current: 1.00e-03 (A)\n",
+      "Active electrodes: 8\n",
+      "Field Summary\n",
+      "----------------------------\n",
+      "Peak Value (99.9 percentile): 0.25 (E)\n",
+      "Mean field norm: 4.97e-02 (E)\n",
+      "Focality: 50%: 1.28e+04 70%: 3.71e+03 (mm2)\n",
+      "Target 1\n",
+      "    Intensity specified:0.20 achieved: 0.20 (E)\n",
+      "    Average angle across target: 13.0 (degrees)\n",
+      "Avoid 1\n",
+      "    Mean field norm in region: 2.75e-03 (E)\n",
+      "\n",
+      "[ simnibs ]SUMMARY: \n",
+      "=====================================\n",
+      "SimNIBS finished running optimization\n",
+      "Mesh file: optimization/avoid.msh\n",
+      "CSV file: optimization/avoid.csv\n",
+      "Summary file: optimization/avoid_summary.txt\n",
+      "=====================================\n",
+      "Exception in thread Thread-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/mark/anaconda3/envs/zen_env/lib/python3.7/subprocess.py\", line 487, in run\n",
+      "    output=stdout, stderr=stderr)\n",
+      "subprocess.CalledProcessError: Command '['/home/mark/anaconda3/envs/zen_env/lib/python3.7/site-packages/simnibs/bin/linux/gmsh', '/home/mark/Desktop/Insai/insai-tes-simulations/notebooks/optimization/avoid.msh']' returned non-zero exit status 1.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "simnibs.run_simnibs(opt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
